--- a/pages/index.html
+++ b/pages/index.html
@@ -7,13 +7,15 @@
 
     <!-- Bootstrap CSS and other scripts/styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script defer src="pagebuilder.js"></script>
     <script defer src="index.js"></script>
-    <link rel="stylesheet" href="../style.css">
+    <script defer src="API_info.js"></script>
+    <link rel="stylesheet" href="../styles/styles.css">
 
-    <title>Hello, world!</title>
+    <title>Weather App</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Weather App --Under Construction--</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
