exporting for pagebuilder works and info from json is transferring correctly

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,15 +7,17 @@
 
     <!-- Bootstrap CSS and other scripts/styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script defer src="pagebuilder.js"></script>
-    <script defer src="index.js"></script>
-    <script defer src="API_info.js"></script>
+    <script type="module" src="index.js"></script>
+    <script type="module" src="API_info.js"></script>
+    <script type="module" src="pagebuilder.js"></script>
     <link rel="stylesheet" href="../styles/styles.css">
 
     <title>Weather App</title>
   </head>
   <body>
     <h1>Weather App --Under Construction--</h1>
+    <div id="currentWeatherDisplay"></div>
+    <div id="7DayForecast"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
