added in a try and catch in case api isnt fetching and added in the location for current day

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <h1>Weather App --Under Construction--</h1>
-    <div id="currentWeatherDisplay"></div>
-    <div id="7DayForecast"></div>
+    <div id="currentWeatherDisplay" class="container"></div>
+    <div id="7DayForecast" class="container2"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
