--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1>Weather App --Under Construction--</h1>
     <form class="weatherInput">
-        <input type="text" class="cityInput" placeholder="Enter City">
+        <input type="text" class="cityInput" placeholder="Enter a US City name">
         <button type="submit">Check the Weather</button>
     </form>
     <div id="currentWeatherDisplay" class="container"></div>
