minor code changes and css changes

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App --Under Construction--</h1>
+    <h1>Weather App</h1>
     <form class="weatherInput">
         <input type="text" class="cityInput" placeholder="Enter a US City name">
         <button type="submit">Check the Weather</button>
