--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
         <button type="submit">Check the Weather</button>
     </form>
     <div id="currentWeatherDisplay" class="container"></div>
-    <div id="7DayForecast" class="container2"></div>
+    <!-- <div id="7DayForecast" class="container2"></div> -->
 
 
   </body>
